NetBSD Problem Report #39744

From www@NetBSD.org  Wed Oct 15 14:54:41 2008
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id E6A5163BC83
	for <gnats-bugs@gnats.netbsd.org>; Wed, 15 Oct 2008 14:54:40 +0000 (UTC)
Message-Id: <20081015145440.AEC4E63BAC6@narn.NetBSD.org>
Date: Wed, 15 Oct 2008 14:54:40 +0000 (UTC)
From: jchome@jc-ix.net
Reply-To: jchome@jc-ix.net
To: gnats-bugs@NetBSD.org
Subject: src/sys/sys/power.h needs types.h
X-Send-Pr-Version: www-1.0

>Number:         39744
>Category:       lib
>Synopsis:       src/sys/sys/power.h needs types.h
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    lib-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Oct 15 14:55:00 +0000 2008
>Closed-Date:    Wed Apr 06 08:16:59 +0000 2011
>Last-Modified:  Wed Apr 06 08:20:02 +0000 2011
>Originator:     Frederic Jaeckel
>Release:        4.99.72
>Organization:
>Environment:
NetBSD xanti.home.jc-ix.net 4.99.72 NetBSD 4.99.72 (GENERIC) #4: Tue Sep 30 12:29:20 CEST 2008  root@xanti.home.jc-ix.net:/usr/obj/sys/arch/i386/compile/GENERIC i386
>Description:
The src/sys/sys/power.h (filed under /usr/include/sys/power.h) needs a #include <types.h>, because of serious errors.

In file included from /usr/include/sys/envsys.h:40,
                 from aps.c:1:
/usr/include/sys/power.h:105: error: expected specifier-qualifier-list before 'int32_t'
/usr/include/sys/power.h:222: error: expected specifier-qualifier-list before 'int32_t'
/usr/include/sys/power.h:237: error: expected specifier-qualifier-list before 'int32_t'
In file included from aps.c:1:
/usr/include/sys/envsys.h:53: error: expected specifier-qualifier-list before 'uint32_t'
/usr/include/sys/envsys.h:155: error: expected specifier-qualifier-list before 'u_int'
/usr/include/sys/envsys.h:212: error: expected specifier-qualifier-list before 'u_int'

>How-To-Repeat:
#include <sys/envsys.h> in your C code.
>Fix:
Index: power.h
===================================================================
RCS file: /cvsroot/src/sys/sys/power.h,v
retrieving revision 1.12
diff -u -r1.12 power.h
--- power.h     22 Aug 2008 11:27:50 -0000      1.12
+++ power.h     15 Oct 2008 14:54:24 -0000
@@ -43,6 +43,7 @@
 #define        _SYS_POWER_H_

 #include <sys/ioccom.h>
+#include <types.h>

 /*
  * Power Switches:

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: jruoho@NetBSD.org
State-Changed-When: Wed, 06 Apr 2011 08:16:59 +0000
State-Changed-Why:

Fixed, thanks.



From: "Jukka Ruohonen" <jruoho@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39744 CVS commit: src/sys/sys
Date: Wed, 6 Apr 2011 08:15:45 +0000

 Module Name:	src
 Committed By:	jruoho
 Date:		Wed Apr  6 08:15:45 UTC 2011

 Modified Files:
 	src/sys/sys: power.h

 Log Message:
 Include stdint(3) for user space. Fixes PR # 39744.


 To generate a diff of this commit:
 cvs rdiff -u -r1.15 -r1.16 src/sys/sys/power.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.