Include stdint(3) for user space. Fixes PR # 39744.